syntax = "proto3";

package demo;

option java_multiple_files = true;
option java_package = "com.grpc.demo";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "STD";

service Instruction {
    rpc getInstructions (InstructionRequest) returns (stream InstructionResponse) {}
}

message InstructionRequest {
    string currentLocation = 1;
}

message InstructionResponse {
    string step = 1;
}